--- a/chat_app/pubspec.yaml
+++ b/chat_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^5.5.3
   image_picker: ^1.1.2
   cloud_firestore: ^5.6.7
+  firebase_messaging: ^15.2.5
 
 dev_dependencies:
   flutter_test:
